@@ -1,3 +1,10 @@
+lxqt-archiver-0.6.0 / 2022-04-15
+===================================
+ * Allow changing of view icon size.
+ * Allow sorting by any column (but only sort by the first column at startup).
+ * Forget previous password (if any) on reloading archive.
+ * Fixed the link in About dialog.
+
 lxqt-archiver-0.5.0 / 2021-11-04
 ===================================
  * Bumped minimum required Qt version to 5.15.
